Fixed dropdown menu overlap.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -18,19 +18,24 @@ h1, a {
     color: black;
 }
 
+
 .card-body{
-    opacity:0.8;
-    transition:0.6s;
-    z-index: 100;
+    opacity: 0.8;
+    transition:0.2s;
 }
+
 .card-body:hover {
     opacity: 1;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    z-index: 100;
 }
 
-.dropdown-menu {
-    z-index: 1000;
+.dropdown-menu{
+    opacity: 0.8
+}
+
+.dropdown-menu:hover{
+    opacity: 1;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 
